--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,14 +3,22 @@
     "b",
     "bước",
     "c",
+    "ch",
     "chuy",
     "chuyển",
+    "ho",
+    "hoạt",
+    "k",
+    "kích",
+    "logo",
+    "lotr",
     "n",
     "nh",
     "nhận",
     "photodiary",
     "sidebar",
     "social",
+    "t",
     "được",
     "định"
   ]
