--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
     "k",
     "kích",
     "logo",
+    "logreg",
     "lotr",
     "n",
     "nh",
@@ -18,6 +19,7 @@
     "photodiary",
     "sidebar",
     "social",
+    "submit",
     "t",
     "được",
     "định"
