--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
     "ch",
     "chuy",
     "chuyển",
+    "dslr",
     "ho",
     "hoạt",
     "k",
@@ -13,6 +14,7 @@
     "logo",
     "logreg",
     "lotr",
+    "mirrorless",
     "n",
     "nh",
     "nhận",
